# specy-engine

./: CMakeLists.txt  README.md  main.cpp
binding/: main.cpp
binding/trusted/: TxContext.cpp
dataservice/: Dataservice.h
engine_server/: EngineServer.cpp  EngineServer.h  ErrorType.h  RegisterServiceImpl.cpp  RegisterServiceImpl.h  RegulatorServiceImpl.cpp  RegulatorServiceImpl.h  SpecyEngine.cpp  SpecyEngine.h
protos/: RuleCheck.proto  build.sh
protos/trusted/e2e_message/: E2EMessage.pb.cc  RuleCheck.pb.cc  RuleCheck.pb.h
rule/: CMakeLists.txt
rule/trusted/antlr4_generated/: RuleLexer.cpp  RuleLexer.h  RuleLexer.interp  RuleLexer.tokens  RuleParser.cpp  RuleParser.h  RuleParser.interp  RuleParser.tokens  RuleParserBaseListener.h  RuleParserBaseVisitor.h  RuleParserListener.h  RuleParserVisitor.h
rule/trusted/data_provider/: DataProvider.cpp  Query.cpp  Query.h
rule/trusted/data_types/: Entity.cpp  Entity.h  Expr.cpp  Expr.h  Instance.cpp  Instance.h  RequestContext.cpp  RequestContext.h
rule/trusted/local_attestation/: RuleResponse.cpp
rule/trusted/request_handler/: RequestHandler.cpp  RequestHandler.h
rule/trusted/rule_processor/: RuleProcessor.cpp  RuleProcessor.h
rule/trusted/rule_visitors/: EntityCollector.cpp  EntityCollector.h  RuleEvaluator.cpp  RuleEvaluator.h  SymbolCollector.cpp  SymbolCollector.h
rule/untrusted/: RuleEnclaveUntrusted.cpp
test/: regulator_client.cpp
test/basic_server/: http_server.cpp
test/testcases/: nft_transfer.cpp  nft_transfer.h
